Minor changes made

--- a/pyprac.ipynb
+++ b/pyprac.ipynb
@@ -194,7 +194,7 @@
     "#sorting\n",
     "shake_para = sorted(shake_para.items(), key = lambda x: x[1], reverse = True)\n",
     "#getting top 3\n",
-    "for i in range(0,2):\n",
+    "for i in range(0,3):\n",
     "    print(shake_para[i][0] + \"\\n\")"
    ]
   },
@@ -359,14 +359,14 @@
     "    #for all s_lines, building logic to spit out plot and title\n",
     "    while s_lines:\n",
     "        sline = iStraight(from_x,to_x)\n",
-    "        plt.title(f' {sline.who_am_i()} \\n Number of coefficients: 2\\n {sline.equation()}',loc='left')\n",
+    "        plt.title(f' {sline.who_am_i()} \\n Number of coefficients: 2\\n {sline.lineEquation()}',loc='left')\n",
     "        sline.linePlot()\n",
     "        s_lines-=1\n",
     "        plt.show()\n",
     "        \n",
     "    while c_lines:\n",
     "        cline = iCurved(from_x,to_x)\n",
-    "        plt.title(f' {cline.who_am_i()} \\n Number of coefficients: 3\\n {cline.equation()}\\n {cline.findRoots()}',loc='left')\n",
+    "        plt.title(f' {cline.who_am_i()} \\n Number of coefficients: 3\\n {cline.lineEquation()}\\n {cline.findRoots()}',loc='left')\n",
     "        cline.linePlot()\n",
     "        c_lines-=1\n",
     "        plt.show()"
