Update with test cases

--- a/pyprac1.ipynb
+++ b/pyprac1.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 500,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 428,
+   "execution_count": 501,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 502,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 503,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +345,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 510,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pushed ( 1 2 )\n",
+      "Poped (1, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_cStack = cStack()\n",
+    "test_cStack.push([1,2])\n",
+    "print(f'Pushed ({test_cStack})')\n",
+    "print(f'Poped {test_cStack.pop()}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 504,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,6 +385,51 @@
     "        \n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 511,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 0 1 2 3 4 \n"
+     ]
+    }
+   ],
+   "source": [
+    "test_aStack = aStack()\n",
+    "for i in range(5):\n",
+    "    test_aStack.push(i)\n",
+    "print(test_aStack)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 512,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 4 3 2 1 0 \n"
+     ]
+    }
+   ],
+   "source": [
+    "rev_stack = stack_reverse(test_aStack)\n",
+    "print(rev_stack)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
